<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="12dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_schoolClass"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schoolClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_date"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_lesson"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_teacher"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_supplyTeacher"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/supplyTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView20"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_room"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView18"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_supplyRoom"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/supplyRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/TextView14"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:text="@string/detail_info"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>