<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.philipp_mandler.android.vtpl.Notenrechner">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.philipp_mandler.android.vtpl.Notenrechner">

                <RelativeLayout
                    android:id="@+id/mainContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp">

                    <RelativeLayout
                        android:id="@+id/mainContentPad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin">


                        <TextView
                            android:id="@+id/textViewHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:gravity="center"
                            android:text="@string/noten_head"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/numInput_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewHead">

                            <EditText
                                android:id="@+id/numInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:gravity="center"
                                android:hint="@string/noten_input"
                                android:inputType="numberDecimal" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/numInput_layout"
                            android:onClick="buttonBG"
                            android:text="@string/noten_bg" />

                        <LinearLayout
                            android:id="@+id/layoutButtons"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bg"
                            android:layout_marginBottom="10dp"
                            android:weightSum="2">

                            <Button
                                android:id="@+id/bf_fs"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="buttpnBSFS"
                                android:text="@string/noten_bf_fs" />


                            <Button
                                android:id="@+id/fos"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="buttonFOS"
                                android:text="@string/noten_fos" />


                        </LinearLayout>

                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:paddingTop="6dp"
                    android:id="@+id/ergebnisText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mainContent"
                    android:gravity="center"
                    android:text="@string/noten_ergebnis_clear"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/ergebnis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ergebnisText"
                    android:gravity="center"
                    android:text="@string/noten_ergebnis_clear"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>